--- a/.github/workflows/llvmlite_linux-64_wheel_builder.yml
+++ b/.github/workflows/llvmlite_linux-64_wheel_builder.yml
@@ -136,7 +136,17 @@ jobs:
           
           # Create wheelhouse directory for artifact upload
           mkdir -p wheelhouse
-          cp dist/wheelhouse/*.whl wheelhouse/
+          
+          # Filter for only this Python version's wheel
+          PY_TAG="${{ env.PYTHON_PATH }}"
+          # List wheels to debug
+          ls -la dist/wheelhouse/
+          # Only copy matching wheel for this Python version
+          cp dist/wheelhouse/*${PY_TAG}*.whl wheelhouse/
+          
+          # Verify we have the correct wheel
+          echo "--- Final wheel for upload: ---"
+          ls -la wheelhouse/
 
       - name: Upload wheel
         uses: actions/upload-artifact@v4
@@ -148,7 +158,7 @@ jobs:
           if-no-files-found: error
 
   linux-64-validate:
-    name: linux-64-validate
+    name: validate-py${{ matrix.python-version }}
     needs: linux-64-build
     runs-on: ubuntu-latest
     defaults:
@@ -189,7 +199,7 @@ jobs:
           done
 
   linux-64-test:
-    name: linux-64-test
+    name: test-py${{ matrix.python-version }}
     needs: linux-64-build
     runs-on: ubuntu-latest
     defaults:
@@ -222,7 +232,16 @@ jobs:
           
           # Install wheel
           cd dist
-          whl=$(ls -t ./*.whl | head -n 1)
+          # Look for wheel matching this python version
+          PY_TAG=$(python -c "import sys; print(f'cp{sys.version_info.major}{sys.version_info.minor}')")
+          whl=$(ls -t ./*${PY_TAG}*.whl | head -n 1)
+          
+          if [ -z "$whl" ]; then
+            echo "ERROR: No matching wheel found for Python ${{ matrix.python-version }} (tag: $PY_TAG)"
+            ls -la
+            exit 1
+          fi
+          
           echo "Using wheel: $whl"
           $PYTHON_PATH -m pip install -v "$whl"
           
@@ -230,7 +249,7 @@ jobs:
           $PYTHON_PATH -m llvmlite.tests
 
   linux-64-upload:
-    name: linux-64-upload
+    name: upload-py${{ matrix.python-version }}
     needs: [linux-64-test, linux-64-validate]
     if: github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
@@ -264,6 +283,15 @@ jobs:
           ANACONDA_API_TOKEN: ${{ secrets.NUMBA_CHANNEL_WHEEL_UPLOAD }}
         run: |
           cd dist
-          whl=$(ls -t ./*.whl | head -n 1)
+          # Find appropriate wheel for Python version
+          PY_TAG="cp$(echo "${{ matrix.python-version }}" | tr -d '.')"
+          whl=$(ls -t ./*${PY_TAG}*.whl | head -n 1)
+          
+          if [ -z "$whl" ]; then
+            echo "ERROR: No matching wheel found for Python ${{ matrix.python-version }}"
+            ls -la
+            exit 1
+          fi
+          
           echo "Uploading wheel: $whl"
           anaconda -t $ANACONDA_API_TOKEN upload --force -u numba -l dev "$whl"
