--- a/.github/workflows/llvmlite_linux-64_wheel_builder.yml
+++ b/.github/workflows/llvmlite_linux-64_wheel_builder.yml
@@ -60,23 +60,24 @@ jobs:
         run: |
           # Map Python version to manylinux path
           case "${{ matrix.python-version }}" in
-            "3.10") echo "PYTHON_PATH=cp310-cp310" >> $GITHUB_ENV ;;
-            "3.11") echo "PYTHON_PATH=cp311-cp311" >> $GITHUB_ENV ;;
-            "3.12") echo "PYTHON_PATH=cp312-cp312" >> $GITHUB_ENV ;;
-            "3.13") echo "PYTHON_PATH=cp313-cp313" >> $GITHUB_ENV ;;
+            "3.10") echo "PYTHON_PATH=cp310-cp310" >> "$GITHUB_ENV" ;;
+            "3.11") echo "PYTHON_PATH=cp311-cp311" >> "$GITHUB_ENV" ;;
+            "3.12") echo "PYTHON_PATH=cp312-cp312" >> "$GITHUB_ENV" ;;
+            "3.13") echo "PYTHON_PATH=cp313-cp313" >> "$GITHUB_ENV" ;;
             *) echo "Invalid Python version" && exit 1 ;;
           esac
+
           # Define Miniconda installer URL
-          echo "MINICONDA_FILE=https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh" >> $GITHUB_ENV
+          echo "MINICONDA_FILE=https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh" >> "$GITHUB_ENV"
 
       - name: Build wheel in manylinux container
         run: |
           # Run the build script in manylinux container using the existing script
           docker run --rm \
-            -v $(pwd):/root/llvmlite \
+            -v "$(pwd):/root/llvmlite" \
             quay.io/pypa/manylinux2014_x86_64 \
             /root/llvmlite/buildscripts/manylinux/build_llvmlite.sh \
-            ${{ env.MINICONDA_FILE }} ${{ env.PYTHON_PATH }}
+            "${{ env.MINICONDA_FILE }}" "${{ env.PYTHON_PATH }}"
 
           # Create wheelhouse directory for artifact upload
           mkdir -p wheelhouse
@@ -86,14 +87,14 @@ jobs:
 
           # List wheels to debug
           echo "Available wheels in $WHEEL_DIR:"
-          ls -la $WHEEL_DIR/
+          find "$WHEEL_DIR" -type f -name "*.whl" -print
 
           # Copy wheels to upload directory
-          cp $WHEEL_DIR/*.whl wheelhouse/ || echo "Warning: No matching wheel found!"
+          cp "$WHEEL_DIR"/*.whl wheelhouse/ || echo "Warning: No matching wheel found!"
 
           # Verify we have the correct wheel
           echo "--- Final wheel for upload: ---"
-          ls -la wheelhouse/
+          find wheelhouse -type f -name "*.whl" -print
 
       - name: Upload wheel
         uses: actions/upload-artifact@v4
@@ -175,25 +176,26 @@ jobs:
           PYTHON_PATH=$(which python)
 
           # Upgrade pip and install wheel
-          $PYTHON_PATH -m pip install --upgrade pip wheel
+          "${PYTHON_PATH}" -m pip install --upgrade pip wheel
 
           # Install wheel
           cd dist
           # Look for wheel matching this python version
           PY_TAG=$(python -c "import sys; print(f'cp{sys.version_info.major}{sys.version_info.minor}')")
-          whl=$(ls -t ./*${PY_TAG}*.whl | head -n 1)
+          # Use find instead of ls for better handling of non-alphanumeric filenames
+          whl=$(find . -type f -name "*${PY_TAG}*.whl" | sort | head -n 1)
 
           if [ -z "$whl" ]; then
             echo "ERROR: No matching wheel found for Python ${{ matrix.python-version }} (tag: $PY_TAG)"
-            ls -la
+            find . -type f -name "*.whl" -print
             exit 1
           fi
 
           echo "Using wheel: $whl"
-          $PYTHON_PATH -m pip install -v "$whl"
+          "${PYTHON_PATH}" -m pip install -v "$whl"
 
           # Run tests
-          $PYTHON_PATH -m llvmlite.tests
+          "${PYTHON_PATH}" -m llvmlite.tests
 
   linux-64-upload:
     name: upload-py${{ matrix.python-version }}
@@ -232,13 +234,14 @@ jobs:
           cd dist
           # Find appropriate wheel for Python version
           PY_TAG="cp$(echo "${{ matrix.python-version }}" | tr -d '.')"
-          whl=$(ls -t ./*${PY_TAG}*.whl | head -n 1)
+          # Use find instead of ls for better handling of non-alphanumeric filenames
+          whl=$(find . -type f -name "*${PY_TAG}*.whl" | sort | head -n 1)
 
           if [ -z "$whl" ]; then
             echo "ERROR: No matching wheel found for Python ${{ matrix.python-version }}"
-            ls -la
+            find . -type f -name "*.whl" -print
             exit 1
           fi
 
           echo "Uploading wheel: $whl"
-          anaconda -t $ANACONDA_API_TOKEN upload --force -u numba -l dev "$whl"
+          anaconda -t "$ANACONDA_API_TOKEN" upload --force -u numba -l dev "$whl"
