update llvmlite wheel builder workflow to configure git safe directory and streamline build script execution

--- a/.github/workflows/llvmlite_linux-64_wheel_builder.yml
+++ b/.github/workflows/llvmlite_linux-64_wheel_builder.yml
@@ -76,8 +76,7 @@ jobs:
           docker run --rm \
             -v "$(pwd):/root/llvmlite" \
             quay.io/pypa/manylinux2014_x86_64 \
-            /root/llvmlite/buildscripts/manylinux/build_llvmlite.sh \
-            "${{ env.MINICONDA_FILE }}" "${{ env.PYTHON_PATH }}"
+            bash -c "git config --global --add safe.directory /root/llvmlite && /root/llvmlite/buildscripts/manylinux/build_llvmlite.sh ${{ env.MINICONDA_FILE }} ${{ env.PYTHON_PATH }}"
 
           # Create wheelhouse directory for artifact upload
           mkdir -p wheelhouse
