--- a/.github/workflows/llvmlite_osx-64_conda_builder.yml
+++ b/.github/workflows/llvmlite_osx-64_conda_builder.yml
@@ -59,6 +59,8 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build llvmlite conda package
+        env:
+          MACOSX_DEPLOYMENT_TARGET: "10.15"
         run: |
           if [ "${{ inputs.llvmdev_run_id }}" != "" ]; then
               LLVMDEV_CHANNEL="file://$PWD/llvmdev_conda_packages"
@@ -67,7 +69,6 @@ jobs:
           fi
           CONDA_CHANNEL_DIR="conda_channel_dir"
           mkdir $CONDA_CHANNEL_DIR
-          export CONDA_BUILD_SYSROOT="/opt/MacOSX10.10.sdk"
           conda build --debug -c "$LLVMDEV_CHANNEL" -c defaults --python=${{ matrix.python-version }} conda-recipes/llvmlite --output-folder=$CONDA_CHANNEL_DIR --no-test
 
       - name: Upload llvmlite conda package
