add CONDA_BUILD_SYSROOT variable to llvmlite conda build workflow

--- a/.github/workflows/llvmlite_osx-64_conda_builder.yml
+++ b/.github/workflows/llvmlite_osx-64_conda_builder.yml
@@ -61,6 +61,7 @@ jobs:
       - name: Build llvmlite conda package
         env:
           MACOSX_DEPLOYMENT_TARGET: "10.10"
+          CONDA_BUILD_SYSROOT: "/opt/MacOSX10.10.sdk"
         run: |
           if [ "${{ inputs.llvmdev_run_id }}" != "" ]; then
               LLVMDEV_CHANNEL="file://$PWD/llvmdev_conda_packages"
