add debug statement to list the contents of the CONDA_BUILD_SYSROOT directory

--- a/.github/workflows/llvmlite_osx-64_conda_builder.yml
+++ b/.github/workflows/llvmlite_osx-64_conda_builder.yml
@@ -63,6 +63,7 @@ jobs:
           MACOSX_DEPLOYMENT_TARGET: "10.10"
           CONDA_BUILD_SYSROOT: "/opt/MacOSX10.10.sdk"
         run: |
+          ls -ld /opt/MacOSX10.10.sdk
           if [ "${{ inputs.llvmdev_run_id }}" != "" ]; then
               LLVMDEV_CHANNEL="file://$PWD/llvmdev_conda_packages"
           else
