Update llvmlite conda build workflow to set CONDA_BUILD_SYSROOT correctly

--- a/.github/workflows/llvmlite_osx-64_conda_builder.yml
+++ b/.github/workflows/llvmlite_osx-64_conda_builder.yml
@@ -61,9 +61,10 @@ jobs:
       - name: Build llvmlite conda package
         env:
           MACOSX_DEPLOYMENT_TARGET: "10.10"
-          SDKROOT: "/opt/MacOSX10.10.sdk"
+          CONDA_BUILD_SYSROOT: "/opt/MacOSX10.10.sdk"
         run: |
           ls -ld /opt/MacOSX10.10.sdk
+          export CONDA_BUILD_SYSROOT="/opt/MacOSX10.10.sdk"
           if [ "${{ inputs.llvmdev_run_id }}" != "" ]; then
               LLVMDEV_CHANNEL="file://$PWD/llvmdev_conda_packages"
           else
