--- a/.github/workflows/llvmlite_conda_builder.yml
+++ b/.github/workflows/llvmlite_conda_builder.yml
@@ -1,9 +1,9 @@
-name: llvmlite_linux-arm64_conda_builder
+name: llvmlite_conda_builder
 
 on:
   pull_request:
     paths:
-      - .github/workflows/llvmlite_linux-arm64_conda_builder.yml
+      - .github/workflows/llvmlite_conda_builder.yml
   workflow_dispatch:
     inputs:
       llvmdev_run_id:
@@ -11,16 +11,36 @@ on:
         required: false
         type: string
 
+# Add concurrency control
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.sha }}
+  cancel-in-progress: true
+
+env:
+  ARTIFACT_RETENTION_DAYS: 7
+
 jobs:
-  linux-arm64-build:
-    name: linux-arm64-build
-    runs-on: ubuntu-24.04-arm
+  build:
+    name: ${{ matrix.platform }}-build
+    runs-on: ${{ matrix.runner }}
     defaults:
       run:
         shell: bash -elx {0}
     strategy:
       matrix:
+        platform: [linux-64, linux-arm64, win-64, osx-64, osx-arm64]
         python-version: ["3.10", "3.11", "3.12", "3.13"]
+        include:
+          - platform: linux-64
+            runner: ubuntu-latest
+          - platform: linux-arm64
+            runner: ubuntu-24.04-arm
+          - platform: win-64
+            runner: windows-2019
+          - platform: osx-64
+            runner: macos-13
+          - platform: osx-arm64
+            runner: macos-14
       fail-fast: false
 
     steps:
@@ -28,6 +48,11 @@ jobs:
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           fetch-depth: 0
+
+      - name: Setup platform-specific requirements
+        if: matrix.platform == 'osx-64'
+        run: |
+          source ./buildscripts/github/setup_platform.sh "osx-64"
 
       - name: Setup Miniconda
         uses: conda-incubator/setup-miniconda@505e6394dae86d6a5c7fbb6e3fb8938e3e863830 # v3.1.1
@@ -43,7 +68,7 @@ jobs:
         if: ${{ inputs.llvmdev_run_id != '' }}
         uses: actions/download-artifact@d3f86a106a0bac45b974a628896c90dbdf5c8093 # v4.3.0
         with:
-          name: llvmdev_linux-arm64
+          name: llvmdev_${{ matrix.platform }}
           path: llvmdev_conda_packages
           run-id: ${{ inputs.llvmdev_run_id }}
           repository: ${{ github.repository }}
@@ -57,28 +82,41 @@ jobs:
               LLVMDEV_CHANNEL="numba"
           fi
           CONDA_CHANNEL_DIR="conda_channel_dir"
-          mkdir "$CONDA_CHANNEL_DIR"
-          conda build --debug -c "$LLVMDEV_CHANNEL" -c defaults --python=${{ matrix.python-version }} conda-recipes/llvmlite --output-folder="$CONDA_CHANNEL_DIR" --no-test
+          mkdir $CONDA_CHANNEL_DIR
+          conda build --debug -c "$LLVMDEV_CHANNEL" -c defaults --python=${{ matrix.python-version }} conda-recipes/llvmlite --output-folder=$CONDA_CHANNEL_DIR --no-test
 
       - name: Upload llvmlite conda package
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
         with:
-          name: llvmlite-linux-arm64-py${{ matrix.python-version }}
+          name: llvmlite-${{ matrix.platform }}-py${{ matrix.python-version }}
           path: conda_channel_dir
           compression-level: 0
-          retention-days: 7
+          retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
           if-no-files-found: error
 
-  linux-arm64-test:
-    name: linux-arm64-test
-    needs: linux-arm64-build
-    runs-on: ubuntu-24.04-arm
+      - name: Show Workflow Run ID
+        run: "echo \"Workflow Run ID: ${{ github.run_id }}\""
+
+  test:
+    name: ${{ matrix.platform }}-test
+    needs: build
+    runs-on: ${{ matrix.runner }}
     defaults:
       run:
         shell: bash -elx {0}
     strategy:
       matrix:
+        platform: [linux-64, win-64, osx-64, osx-arm64]
         python-version: ["3.10", "3.11", "3.12", "3.13"]
+        include:
+          - platform: linux-64
+            runner: ubuntu-latest
+          - platform: win-64
+            runner: windows-2019
+          - platform: osx-64
+            runner: macos-13
+          - platform: osx-arm64
+            runner: macos-14
       fail-fast: false
 
     steps:
@@ -88,11 +126,10 @@ jobs:
       - name: Download llvmlite artifact
         uses: actions/download-artifact@d3f86a106a0bac45b974a628896c90dbdf5c8093 # v4.3.0
         with:
-          name: llvmlite-linux-arm64-py${{ matrix.python-version }}
+          name: llvmlite-${{ matrix.platform }}-py${{ matrix.python-version }}
 
       - name: Install conda-build
-        run: |
-          conda install conda-build
+        run: conda install conda-build
 
       - name: Run tests
-        run: conda build --test linux-aarch64/llvmlite*.conda
+        run: conda build --test ${{ matrix.platform }}/llvmlite*.conda
