--- a/.github/workflows/llvmlite_win-64_conda_builder.yml
+++ b/.github/workflows/llvmlite_win-64_conda_builder.yml
@@ -23,7 +23,7 @@ jobs:
   check:
     runs-on: ubuntu-latest
     outputs:
-      should_run: ${{ steps.evaluate.outputs.should_run }}
+      matrix: ${{ steps.evaluate.outputs.matrix }}
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       - uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5.6.0
@@ -39,7 +39,7 @@ jobs:
 
   win-64-build:
     needs: check
-    if: needs.check.outputs.should_run == 'true'
+    if: needs.check.outputs.matrix == 'true'
     name: win-64-build
     runs-on: windows-2019
     defaults:
