--- a/.github/workflows/llvmlite_osx-arm64_conda_builder.yml
+++ b/.github/workflows/llvmlite_osx-arm64_conda_builder.yml
@@ -4,6 +4,9 @@ on:
   pull_request:
     paths:
       - .github/workflows/llvmlite_osx-arm64_conda_builder.yml
+      - buildscripts/github/llvmlite_evaluate.py
+  label:
+    types: [created]
   workflow_dispatch:
     inputs:
       llvmdev_run_id:
@@ -17,7 +20,26 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  check:
+    runs-on: ubuntu-latest
+    outputs:
+      matrix: ${{ steps.evaluate.outputs.matrix }}
+    steps:
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      - uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5.6.0
+        with:
+          python-version: '3.13'
+      - name: Evaluate
+        id: evaluate
+        env:
+          GITHUB_EVENT_NAME: ${{ github.event_name }}
+          GITHUB_LABEL_NAME: ${{ github.event.label.name }}
+        run: |
+          ./buildscripts/github/llvmlite_evaluate.py
+
   osx-arm64-build:
+    needs: check
+    if: needs.check.outputs.matrix == 'true'
     name: osx-arm64-build
     runs-on: macos-14
     defaults:
