--- a/.github/workflows/llvmlite_conda_builder.yml
+++ b/.github/workflows/llvmlite_conda_builder.yml
@@ -4,43 +4,78 @@ on:
   pull_request:
     paths:
       - .github/workflows/llvmlite_conda_builder.yml
+      - buildscripts/github/llvmlite_evaluate.py
+  label:
+    types: [created]
   workflow_dispatch:
     inputs:
       llvmdev_run_id:
         description: 'llvmdev workflow run ID (optional)'
         required: false
         type: string
+      platform:
+        description: Conda Platform
+        default: linux-64
+        required: true
+        type: choice
+        options:
+          - linux-64
+          - linux-arm64
+          - osx-64
+          - osx-arm64
+          - win-64
+      python-version:
+        description: Python version
+        default: "3.12"
+        required: true
+        type: choice
+        options:
+          - "3.10"
+          - "3.11"
+          - "3.12"
+          - "3.13"
 
 # Add concurrency control
 concurrency:
-  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.sha }}
+  group: >-
+    ${{ github.workflow }}-
+    ${{ github.event.pull_request.number
+      || toJson(github.event.inputs)
+      || github.event.label.name
+      || github.sha }}
   cancel-in-progress: true
 
 env:
   ARTIFACT_RETENTION_DAYS: 7
 
 jobs:
+  check:
+    runs-on: ubuntu-24.04
+    outputs:
+      matrix: ${{ steps.evaluate.outputs.matrix }}
+    steps:
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      - uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5.6.0
+        with:
+          python-version: '3.13'
+      - name: Evaluate
+        id: evaluate
+        env:
+          GITHUB_EVENT_NAME: ${{ github.event_name }}
+          GITHUB_LABEL_NAME: ${{ github.event.label.name }}
+          GITHUB_WORKFLOW_INPUT: ${{ toJson(github.event.inputs) }}
+        run: |
+          ./buildscripts/github/llvmlite_evaluate.py
+
   build:
-    name: ${{ matrix.platform }}-build
+    needs: check
+    name: ${{ matrix.platform }}-py${{ matrix.python-version }}-build
     runs-on: ${{ matrix.runner }}
     defaults:
       run:
         shell: bash -elx {0}
     strategy:
-      matrix:
-        platform: [linux-64, linux-arm64, win-64, osx-64, osx-arm64]
-        python-version: ["3.10", "3.11", "3.12", "3.13"]
-        include:
-          - platform: linux-64
-            runner: ubuntu-latest
-          - platform: linux-arm64
-            runner: ubuntu-24.04-arm
-          - platform: win-64
-            runner: windows-2019
-          - platform: osx-64
-            runner: macos-13
-          - platform: osx-arm64
-            runner: macos-14
+      matrix: ${{fromJson(needs.check.outputs.matrix)}}
       fail-fast: false
 
     steps:
@@ -98,25 +133,14 @@ jobs:
         run: "echo \"Workflow Run ID: ${{ github.run_id }}\""
 
   test:
-    name: ${{ matrix.platform }}-test
-    needs: build
+    name: ${{ matrix.platform }}-py${{ matrix.python-version }}-test
+    needs: [check, build]
     runs-on: ${{ matrix.runner }}
     defaults:
       run:
         shell: bash -elx {0}
     strategy:
-      matrix:
-        platform: [linux-64, win-64, osx-64, osx-arm64]
-        python-version: ["3.10", "3.11", "3.12", "3.13"]
-        include:
-          - platform: linux-64
-            runner: ubuntu-latest
-          - platform: win-64
-            runner: windows-2019
-          - platform: osx-64
-            runner: macos-13
-          - platform: osx-arm64
-            runner: macos-14
+      matrix: ${{fromJson(needs.check.outputs.matrix)}}
       fail-fast: false
 
     steps:
