--- a/.github/workflows/llvmlite_linux-arm64_wheel_builder.yml
+++ b/.github/workflows/llvmlite_linux-arm64_wheel_builder.yml
@@ -40,6 +40,9 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Show Workflow Run ID
+        run: "echo \"Workflow Run ID: ${{ github.run_id }}\""
+
       - name: Download llvmdev Artifact
         if: ${{ inputs.llvmdev_run_id != '' }}
         uses: actions/download-artifact@d3f86a106a0bac45b974a628896c90dbdf5c8093 # v4.3.0
