update llvmlite workflow configurations to replace 'linux-arm64' with 'linux-aarch64' for consistency

--- a/.github/workflows/llvmlite_conda_builder.yml
+++ b/.github/workflows/llvmlite_conda_builder.yml
@@ -19,7 +19,7 @@ on:
         options:
           - all
           - linux-64
-          - linux-arm64
+          - linux-aarch64
           - osx-64
           - osx-arm64
           - win-64
