--- a/conda-recipes/llvmlite/conda_build_config.yaml
+++ b/conda-recipes/llvmlite/conda_build_config.yaml
@@ -2,10 +2,12 @@
 c_compiler_version:         # [linux]
   - 7                       # [linux and (x86_64 or ppc64le)]
   - 11                      # [linux and aarch64]
+  - 14                      # [osx]
 
 cxx_compiler_version:       # [linux]
   - 7                       # [linux and (x86_64 or ppc64le)]
   - 11                      # [linux and aarch64]
+  - 14                      # [osx]
 
 fortran_compiler_version:   # [linux]
   - 7                       # [linux and (x86_64 or ppc64le)]
